<resources>
    <string name="app_name">WeatherApp</string>
    <string name="forecast">Forecast</string>
    <string name="detail">Detail</string>
    <string name="degrees">%s°</string>
    <string name="wind_speed">Wind speed (m/s) %s</string>
    <string name="clouds">Clouds (percent) %s</string>
    <string name="pressure">Pressure (hPa) %s</string>
    <string name="humidity">Humidity (percent) %s</string>
    <string name="wind">Wind</string>
    <string name="precipitation">Precipitation</string>
    <string name="other">Other</string>
    <string name="feels_like">Feels like %s°</string>
    <string name="visibility">Visibility (m) %s</string>
    <string name="wind_degrees">Wind degrees %s°</string>
    <string name="wind_gust">Wind gust (m/s) %s</string>
    <string name="rain">Rain for 1 hour (mm) %s</string>
    <string name="snow">Snow for 1 hour (mm) %S</string>
    <string name="refresh">Refresh</string>
    <string name="internet_connection_error">Internet connection error</string>
    <string name="data_not_found">Data not found</string>
    <string name="user_not_authorised">User not authorised</string>
    <string name="unknown_error">Unknown error</string>
    <string name="wind_speed_title">Wind speed</string>
    <string name="feels_like_title">Feels like</string>
    <string name="description">Description</string>
    <string name="_100">100%</string>
    <string name="connection_time_error">Connection time expired. Please, try again</string>
</resources>