<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guide_line"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="10dp" />

        <TextView
            android:id="@+id/info"
            android:text="info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:src="@drawable/ic_sunny"
            android:id="@+id/weather_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintStart_toEndOf="@id/degrees"
            app:layout_constraintEnd_toEndOf="@id/end_guide_line" />

        <TextView
            android:id="@+id/weather_description"
            android:text="Weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/weather_image"
            app:layout_constraintEnd_toEndOf="@id/weather_image"
            app:layout_constraintTop_toBottomOf="@id/weather_image" />

        <TextView
            android:id="@+id/visibility"
            android:text="@string/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/weather_description" />

        <TextView
            android:textSize="80sp"
            android:text="@string/degrees"
            android:id="@+id/degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toTopOf="@id/weather_image"
            app:layout_constraintBottom_toTopOf="@id/feels_like"
            app:layout_constraintEnd_toStartOf="@id/weather_image" />

        <TextView
            android:text="@string/feels_like"
            android:id="@+id/feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/degrees"
            app:layout_constraintBottom_toBottomOf="@id/weather_image"
            app:layout_constraintEnd_toStartOf="@id/weather_image" />

        <TextView
            android:id="@+id/wind_title"
            android:text="@string/wind"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintEnd_toEndOf="@id/end_guide_line"
            app:layout_constraintTop_toBottomOf="@id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wind_speed"
            android:text="@string/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/wind_title" />

        <TextView
            android:id="@+id/wind_degrees"
            android:text="@string/wind_degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/wind_speed" />

        <TextView
            android:id="@+id/wind_gust"
            android:text="@string/wind_gust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/wind_degrees" />

        <TextView
            android:id="@+id/precipitation_title"
            android:text="@string/precipitation"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintEnd_toEndOf="@id/end_guide_line"
            app:layout_constraintTop_toBottomOf="@id/wind_gust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/clouds"
            android:text="@string/clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/precipitation_title" />

        <TextView
            android:id="@+id/rain"
            android:text="@string/rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/clouds" />

        <TextView
            android:id="@+id/snow"
            android:text="@string/snow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/rain" />

        <TextView
            android:id="@+id/humidity"
            android:text="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/start_guide_line"
            app:layout_constraintTop_toBottomOf="@id/visibility" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>